[gd_scene load_steps=8 format=3 uid="uid://upuhfy3wucqe"]

[ext_resource type="Script" path="res://src/screens/InitialMenu.gd" id="1_uh3xb"]
[ext_resource type="PackedScene" uid="uid://ddn0gc3sfyppy" path="res://src/screens/LevelManager.tscn" id="2_0nk4s"]
[ext_resource type="Texture2D" uid="uid://bavpgub2vqr5h" path="res://assets/textures/kokoro.png" id="2_cvxl2"]
[ext_resource type="Texture2D" uid="uid://rpwutl2pn1q1" path="res://assets/textures/the_legend_of_akakawa.png" id="3_3hixy"]
[ext_resource type="FontFile" uid="uid://bwkk85s6e8x3" path="res://assets/fonts/tinypixel.otf" id="4_0s2nw"]
[ext_resource type="Script" path="res://src/screens/Button.gd" id="5_qdy2m"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yhfya"]
bg_color = Color(0, 0, 0, 0.745098)

[node name="InitialMenu" type="Node"]
script = ExtResource("1_uh3xb")
level_manager_scene = ExtResource("2_0nk4s")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_yhfya")

[node name="Title" type="TextureRect" parent="Control/Panel"]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 68.0
offset_top = 20.0
offset_right = 103.0
offset_bottom = -105.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_cvxl2")

[node name="Subtitle" type="TextureRect" parent="Control/Panel"]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 50.0
offset_right = 298.0
offset_bottom = -70.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_3hixy")

[node name="Control" type="Control" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -99.5
offset_top = 3.0
offset_right = 100.5
offset_bottom = 53.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayButton" type="Button" parent="Control/Panel/Control/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("4_0s2nw")
theme_override_font_sizes/font_size = 18
text = "Play"
script = ExtResource("5_qdy2m")

[node name="OptionsButton" type="Button" parent="Control/Panel/Control/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("4_0s2nw")
theme_override_font_sizes/font_size = 18
text = "Options"

[connection signal="pressed" from="Control/Panel/Control/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
